force-app/main/default/objects/SPEN_Job__c/fields/SPEN_Source__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Source__c</fullName>
    <description>Created as part of ESC-39.</description>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email North</fullName>
            </value>
            <value>
                <fullName>Email South</fullName>
            </value>
            <value>
                <fullName>L&amp;P</fullName>
            </value>
            <value>
                <fullName>External</fullName>
            </value>
            <value>
                <fullName>Email LV Claims</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
                <isActive>false</isActive>
                <label>Email</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>