force-app/main/default/objects/SPEN_Job__c/fields/SPEN_SubCategory__c.field-meta.xml
<CustomField>
    <fullName>SPEN_SubCategory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Look up from Work category where job category is Parent category</description>
    <label>Sub Category</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>SPEN_WorkCategory__c.SPEN_ParentWorkCategory__c</field>
            <operation>equals</operation>
            <valueField>$Source.SPEN_WorkCategory__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>SPEN_WorkCategory__c</referenceTo>
    <relationshipLabel>Jobs (Sub Category)</relationshipLabel>
    <relationshipName>JobsSubCategory</relationshipName>
    <type>Lookup</type>
</CustomField>