force-app/main/default/objects/SPEN_Job__c/fields/SPEN_TitleReportQuoteRequested__c.field-meta.xml
<CustomField>
    <fullName>SPEN_TitleReportQuoteRequested__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Title Report Quote Requested</label>
    <type>Checkbox</type>
</CustomField>