force-app/main/default/objects/SPEN_Job__c/fields/SPEN_TotalLefttoPayEstimate__c.field-meta.xml
<CustomField>
    <fullName>SPEN_TotalLefttoPayEstimate__c</fullName>
    <label>Total Left to Pay (Estimate)</label>
    <summarizedField>SPEN_Project_Cost_Payment__c.SPEN_TotalLefttoPay__c</summarizedField>
    <summaryForeignKey>SPEN_Project_Cost_Payment__c.SPEN_Job__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>