force-app/main/default/objects/SPEN_Job__c/fields/SPEN_TotalPaidtoDate__c.field-meta.xml
<CustomField>
    <fullName>SPEN_TotalPaidtoDate__c</fullName>
    <label>Total Paid to Date</label>
    <summarizedField>SPEN_Project_Cost_Payment__c.SPEN_TotalPaidtoDate__c</summarizedField>
    <summaryForeignKey>SPEN_Project_Cost_Payment__c.SPEN_Job__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>