force-app/main/default/objects/SPEN_Job__c/fields/SPEN_UniqueID__c.field-meta.xml
<CustomField>
    <fullName>SPEN_UniqueID__c</fullName>
    <description>Used for the Auto Numbering Logic for Job&apos;s unique identifiers</description>
    <displayFormat>J-{00000}</displayFormat>
    <label>Unique ID</label>
    <type>AutoNumber</type>
</CustomField>