force-app/main/default/objects/SPEN_Job__c/fields/SPEN_WorkCategory__c.field-meta.xml
<CustomField>
    <fullName>SPEN_WorkCategory__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Job Work Category</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>SPEN_WorkCategory__c.SPEN_LicenseArea__c</field>
            <operation>equals</operation>
            <valueField>$Source.SPEN_LicenseArea__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>SPEN_WorkCategory__c</referenceTo>
    <relationshipLabel>Jobs</relationshipLabel>
    <relationshipName>Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>