force-app/main/default/objects/SPEN_Job__c/fields/SPENEnvironmentalPlanner__c.field-meta.xml
<CustomField>
    <fullName>SPENEnvironmentalPlanner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Environmental Planner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>EnvironmentalPlannerJobs</relationshipName>
    <type>Lookup</type>
</CustomField>