force-app/main/default/objects/SPEN_Job__c/validationRules/SPEN_CustomerDetailsMandate.validationRule-meta.xml
<ValidationRule>
    <fullName>SPEN_CustomerDetailsMandate</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(SPEN_CustomerType__c, &quot;Customer Connection&quot;) &amp;&amp;(

 ISBLANK(SPEN_Customer__c) || ISBLANK( SPEN_CustomerAddress__c) ||  ISBLANK(SPEN_CustomerPhone__c) ||  ISBLANK(SPEN_CustomerEmail__c  )  )</errorConditionFormula>
    <errorMessage>For Customer Type as Customer connection please add the details for below fields:
Customer, Customer Address, Customer Phone, Customer Email</errorMessage>
</ValidationRule>