force-app/main/default/objects/SPEN_Job__c/validationRules/SPEN_CustomerPhoneValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>SPEN_CustomerPhoneValidation</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISBLANK(SPEN_CustomerPhone__c)) &amp;&amp; NOT(REGEX( SPEN_CustomerPhone__c , &quot;[0-9]{10,12}&quot;))</errorConditionFormula>
    <errorDisplayField>SPEN_CustomerPhone__c</errorDisplayField>
    <errorMessage>Please enter valid phone number</errorMessage>
</ValidationRule>