force-app/main/default/objects/SPEN_Job__c/validationRules/SPEN_JobCancellationMandatoryFields.validationRule-meta.xml
<ValidationRule>
    <fullName>SPEN_JobCancellationMandatoryFields</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL( SPEN_JobStatus__c , &quot;Cancelled&quot;) &amp;&amp;  (ISBLANK( TEXT(SPEN_Cancelledby__c))||ISBLANK( TEXT(  SPEN_CancelledReason__c )))</errorConditionFormula>
    <errorMessage>Please enter values for Cancelled by and Cancelled Reason to cancel the job.</errorMessage>
</ValidationRule>