force-app/main/default/objects/SPEN_Job__c/validationRules/SPEN_OSGridReferenceInputValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>SPEN_OSGridReferenceInputValidation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(ISBLANK(SPEN_OSGridReference__c)),
NOT(REGEX( SPEN_OSGridReference__c,&quot;[0-9]{6},[0-9]{6}&quot;))
)</errorConditionFormula>
    <errorDisplayField>SPEN_OSGridReference__c</errorDisplayField>
    <errorMessage>Ensure Format of OS Grid Reference is &apos;NNNNNN,NNNNNN&apos;</errorMessage>
</ValidationRule>