force-app/main/default/objects/SPEN_Job__c/validationRules/SPEN_RequiredUserforLive.validationRule-meta.xml
<ValidationRule>
    <fullName>SPEN_RequiredUserforLive</fullName>
    <active>true</active>
    <errorConditionFormula>AND(SPEN_Create_Job_in_Live__c = TRUE ,  ISNEW() ,ISBLANK( SPENEnvironmentalPlanner__c )  , ISBLANK( SPEN_LandAssistant__c ) , ISBLANK( SPEN_LandOfficer__c ) , ISBLANK( SPEN_LandManager__c ) 


)</errorConditionFormula>
    <errorMessage>Please add at least one user in L&amp;P user section</errorMessage>
</ValidationRule>