force-app/main/default/objects/SPEN_Job__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SPEN_JobTitle__c</columns>
    <columns>SPEN_JobStatus__c</columns>
    <columns>SPEN_WorkCategory__c</columns>
    <columns>SPEN_LicenseArea__c</columns>
    <columns>SPEN_LandOfficer__c</columns>
    <columns>SPEN_LandAssistant__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>SPEN_ProjectManager__c</columns>
    <columns>SPEN_DeliveryEngineer__c</columns>
    <columns>SPEN_LandManager__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>