force-app/main/default/objects/SPEN_Job__c/listViews/LV_Claims_SPD.listView-meta.xml
<ListView>
    <fullName>LV_Claims_SPD</fullName>
    <booleanFilter>1 AND 2</booleanFilter>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>SPEN_JobStatus__c</columns>
    <columns>SPEN_JobTitle__c</columns>
    <columns>SPEN_BusinessArea__c</columns>
    <columns>SPEN_District__c</columns>
    <columns>SPEN_WorkCategory__c</columns>
    <columns>SPEN_LocationPostCode__c</columns>
    <columns>SPEN_ControlNumber__c</columns>
    <columns>SPEN_Project_CustomerReference__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>SPEN_ProjectManager__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SPEN_Source__c</field>
        <operation>equals</operation>
        <value>Email LV Claims</value>
    </filters>
    <filters>
        <field>SPEN_LicenseArea__c</field>
        <operation>equals</operation>
        <value>SPD</value>
    </filters>
    <label>LV Claims SPD</label>
</ListView>