force-app/main/default/objects/SPEN_Job__c/listViews/SPEN_Land_South_Queue_LAs_CAs_LOs_SPEN_Job.listView-meta.xml
<ListView>
    <fullName>SPEN_Land_South_Queue_LAs_CAs_LOs_SPEN_Job</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>SPEN_JobStatus__c</columns>
    <columns>SPEN_JobTitle__c</columns>
    <columns>SPEN_BusinessArea__c</columns>
    <columns>SPEN_District__c</columns>
    <columns>SPEN_WorkCategory__c</columns>
    <columns>SPEN_LocationPostCode__c</columns>
    <columns>SPEN_ControlNumber__c</columns>
    <columns>SPEN_Project_CustomerReference__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>SPEN_ProjectManager__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Queue</filterScope>
    <label>Land South Queue (LAs/CAs/LOs)</label>
    <queue>SPEN_Land_South_Queue_LAs_CAs_LOs</queue>
</ListView>