force-app/main/default/objects/SPEN_Job__c/listViews/SPEN_Transmission_Land_Planning_Queue_SPEN_Job.listView-meta.xml
<ListView>
    <fullName>SPEN_Transmission_Land_Planning_Queue_SPEN_Job</fullName>
    <columns>NAME</columns>
    <columns>SPEN_JobStatus__c</columns>
    <columns>SPEN_LicenseArea__c</columns>
    <columns>SPEN_JobTitle__c</columns>
    <columns>SPEN_CircuitID__c</columns>
    <columns>SPEN_BusinessArea__c</columns>
    <columns>SPEN_WorkCategory__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>SPEN_ProjectManager__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Queue</filterScope>
    <label>Transmission Land &amp; Planning Queue</label>
    <queue>SPEN_Transmission_Land_Planning_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>